Package updates January 2016

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -37,7 +37,7 @@ Sample binding in application.config for iisexpress
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="mailAccount" value="music4dance" />
     <add key="mailPassword" value="TX9ES3D0cTDzCeP" />
-    <add key="MigrateDatabaseToLatestVersion" value="true"/>
+    <add key="MigrateDatabaseToLatestVersion" value="true" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -124,7 +124,7 @@ Sample binding in application.config for iisexpress
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
@@ -164,7 +164,7 @@ Sample binding in application.config for iisexpress
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.9.81.0" newVersion="1.9.81.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.89.0" newVersion="1.9.89.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="JavaScriptEngineSwitcher.Core" publicKeyToken="c608b2a8cc9e4472" culture="neutral" />
@@ -196,7 +196,7 @@ Sample binding in application.config for iisexpress
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Diagnostics.Tracing.EventSource" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.1.26.0" newVersion="1.1.26.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.28.0" newVersion="1.1.28.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="IKVM.Runtime" publicKeyToken="13235d27fcbfff58" culture="neutral" />
@@ -245,6 +245,10 @@ Sample binding in application.config for iisexpress
       <dependentAssembly>
         <assemblyIdentity name="IKVM.OpenJDK.Management" publicKeyToken="13235d27fcbfff58" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.1.5717.0" newVersion="8.1.5717.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.AI.Agent.Intercept" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.1.0" newVersion="1.2.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
