--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -95,6 +95,7 @@
     <Compile Include="PurchaseRegion.cs" />
     <Compile Include="PurchaseType.cs" />
     <Compile Include="QuickTimer.cs" />
+    <Compile Include="Search.cs" />
     <Compile Include="ServiceType.cs" />
     <Compile Include="SongCounts.cs" />
     <Compile Include="SongFilterConverter.cs" />
