--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -117,6 +117,7 @@
     <Content Include="TestData\test-dances.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="TestData\test-searches.txt" />
     <Content Include="TestData\test-songs.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
