--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -3,6 +3,7 @@
   <package id="AjaxMin" version="5.14.5506.26202" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
+  <package id="bootstrap.less" version="3.3.6" targetFramework="net45" />
   <package id="BundleTransformer.Core" version="1.9.89" targetFramework="net45" />
   <package id="BundleTransformer.Less" version="1.9.76" targetFramework="net45" />
   <package id="BundleTransformer.MicrosoftAjax" version="1.9.52" targetFramework="net45" />
@@ -64,6 +65,6 @@
   <package id="Sendgrid" version="6.3.4" targetFramework="net45" />
   <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
-  <package id="Twitter.Bootstrap.Less" version="3.3.5" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.Less" version="3.3.6" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
