Add Mood, Beat, and Energy Icons

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -497,6 +497,17 @@
     <Content Include="Content\auth-icons.png" />
     <Content Include="Content\ballroom-bkg.png" />
     <Content Include="Content\ballroom.png" />
+    <Content Include="Content\beat-0.png" />
+    <Content Include="Content\beat-1.png" />
+    <Content Include="Content\beat-10.png" />
+    <Content Include="Content\beat-2.png" />
+    <Content Include="Content\beat-3.png" />
+    <Content Include="Content\beat-4.png" />
+    <Content Include="Content\beat-5.png" />
+    <Content Include="Content\beat-6.png" />
+    <Content Include="Content\beat-7.png" />
+    <Content Include="Content\beat-8.png" />
+    <Content Include="Content\beat-9.png" />
     <Content Include="Content\BlackBanner.png" />
     <Content Include="Content\blue-help.png" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -513,6 +524,17 @@
     <Content Include="Content\dance-tempo-50.png" />
     <Content Include="Content\echonest-lg.gif" />
     <Content Include="Content\echonest.png" />
+    <Content Include="Content\Energy-0.png" />
+    <Content Include="Content\Energy-1.png" />
+    <Content Include="Content\Energy-10.png" />
+    <Content Include="Content\Energy-2.png" />
+    <Content Include="Content\Energy-3.png" />
+    <Content Include="Content\Energy-4.png" />
+    <Content Include="Content\Energy-5.png" />
+    <Content Include="Content\Energy-6.png" />
+    <Content Include="Content\Energy-7.png" />
+    <Content Include="Content\Energy-8.png" />
+    <Content Include="Content\Energy-9.png" />
     <Content Include="Content\favicon.png" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\genre-50.png" />
@@ -528,6 +550,17 @@
     <Content Include="Content\itunes-logo.png" />
     <Content Include="Content\jquery.nouislider.css" />
     <Content Include="Content\jquery.nouislider.pips.css" />
+    <Content Include="Content\mood-0.png" />
+    <Content Include="Content\mood-1.png" />
+    <Content Include="Content\mood-10.png" />
+    <Content Include="Content\mood-2.png" />
+    <Content Include="Content\mood-3.png" />
+    <Content Include="Content\mood-4.png" />
+    <Content Include="Content\mood-5.png" />
+    <Content Include="Content\mood-6.png" />
+    <Content Include="Content\mood-7.png" />
+    <Content Include="Content\mood-8.png" />
+    <Content Include="Content\mood-9.png" />
     <Content Include="Content\music.png" />
     <Content Include="Content\Music4DanceBannerColor.png" />
     <Content Include="Content\orange-bootstrap-min.css" />
