Pull out the music service handling from the dancemusiccontext

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -470,6 +470,7 @@
     </Compile>
     <Compile Include="Startup.cs" />
     <Compile Include="Utilities\GenericPrincipalExtensions.cs" />
+    <Compile Include="Utilities\MusicServiceManager.cs" />
     <Compile Include="Utilities\SpiderManager.cs" />
     <Compile Include="Utilities\SpotAuthentication.cs" />
     <Compile Include="Utilities\AdmAuthentication.cs" />
