Fixed a couple of stale links (wrt to info that had more appropriate initial links) and added blog posts to the carousel.

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -543,6 +543,8 @@
     <Content Include="Content\Energy-desc.png" />
     <Content Include="Content\favicon.png" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\fun-bkg.png" />
+    <Content Include="Content\fun.png" />
     <Content Include="Content\genre-50.png" />
     <Content Include="Content\gray-bootstrap-min.css" />
     <Content Include="Content\gray-bootstrap-theme.css" />
