--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -53,6 +53,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.10" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="MsieJavaScriptEngine" version="1.6.0" targetFramework="net45" />
   <package id="MvcDiagnostics" version="5.2.3" targetFramework="net45" />
