--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -37,6 +37,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Azure.Search" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
@@ -52,6 +53,9 @@
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Rest.ClientRuntime" version="1.8.1" targetFramework="net45" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="2.5.2" targetFramework="net45" />
+  <package id="Microsoft.Spatial" version="6.13.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.10" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
