--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -107,6 +107,7 @@
     <Compile Include="ErrorModel.cs" />
     <Compile Include="IDanceMusicContext.cs" />
     <Compile Include="DanceLink.cs" />
+    <Compile Include="IndexInfo.cs" />
     <Compile Include="LikeDictionarycs.cs" />
     <Compile Include="LocalMerger.cs" />
     <Compile Include="MergeCluster.cs" />
