--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -125,6 +125,7 @@
     <Compile Include="SongSort.cs" />
     <Compile Include="SpotifyService.cs" />
     <Compile Include="StringableList.cs" />
+    <Compile Include="Suggestion.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="Dance.cs" />
     <Compile Include="DanceRating.cs" />
