Change tag filter drop-down to modals - could probably use another round of code cleanup as well as another round of UX, but this is markedly improved on both counts.

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -985,6 +985,8 @@
     <Content Include="Views\Searches\Index.cshtml" />
     <Content Include="Views\Song\AzureSearch.cshtml" />
     <Content Include="Views\Shared\_SetupFilterScript.cshtml" />
+    <Content Include="Views\Shared\_playmodal.cshtml" />
+    <Content Include="Views\Shared\_filtermodal.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
