--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -117,6 +117,7 @@
     <Compile Include="QuickTimer.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="SearchResults.cs" />
+    <Compile Include="SearchServiceInfo.cs" />
     <Compile Include="ServiceType.cs" />
     <Compile Include="SongCounts.cs" />
     <Compile Include="SongFilterConverter.cs" />
